<resources>
    <string name="app_name">IntelligentHomeAnywhere</string>
    <string name="app_id">1411635335720288</string>
    <string name="blank"></string>
    <string name="title_activity_location_screen">IHA</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_add_sensor">Add Sensor</string>
    <string name="title_activity_sensor_detail">Sensor Detail</string>
    <string name="title_activity_add_adapter">Add Adapter</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login_facebook">Facebook</string>
    <string name="title_activity_widget_configuration">Widget Configuration</string>
    <string name="title_activity_location_detail_screen">Location Detail</string>
    <string name="title_activity_add_adapter_activity_dialog">AddAdapterActivityDialog</string>
    <string name="title_activity_add_sensor_activity_dialog">AddSensorActivityDialog</string>
    <string name="title_activity_alert_activity_dialog">AlertActivityDialog</string>
    <string name="title_activity_map_geofence">Geofence areas</string>
    <string name="title_activity_adapter_users">Users of adapter</string>
    <string name="title_activity_add_adapter_user">Add new user</string>
    <string name="login_login">Login</string>
    <string name="login_demo">Demo mode</string>
    <string name="registration_button">Registration</string>
    <string name="alert_neutral">Click me</string>
    <string name="alert_positive">OK</string>
    <string name="notification_title">New sensors</string>
    <plurals name="notification_new_sensors">
        <item quantity="one">One uninitialized sensor found at your home.</item>
        <item quantity="other">%d uninitialized sensors found at your home.</item>
    </plurals>
    <string name="notification_ingore">Ignore</string>
    <string name="notification_add">Add</string>
    <string name="notification_cancel">Cancel</string>
    <string name="login_app_name">Intelligent Home Anywhere</string>
    <string name="login_or_use">or use</string>
    <string name="addsensor_add_sensor">Add sensor</string>
    <string name="addsensor_setup_sensor">Setup facility</string>
    <string name="addsensor_or">or</string>
    <string name="sensordetail_last_value">Last value:\u0020</string>
    <string name="sensordetail_refresh_time">Refresh inteval: </string>
    <string name="sensordetail_battery_state">Battery state</string>
    <string name="update_needed">Please update application</string>
    <string name="addsensor_type">Type of sensor:</string>
    <string name="setup_sensor_info_text">Please, setup your new facility which was activated at </string>
    <string name="setup_sensor_header_names">Sensors names</string>
    <string name="setup_sensor_set_name">Set name of sensor</string>
    <string name="setup_sensor_header_location">Location</string>
    <string name="addadapter_add_adapter">Add adapter</string>
    <string name="registration_label">New account</string>
    <string name="registration_serial_number">For adapter with serial number:</string>
    <string name="alert_title">Title</string>
    <string name="alert_message">Message</string>
    <string name="refresh_time">Refresh time: </string>
    <string name="last_update">Last update:</string>
    <string name="sen_graph_label">Graph of history</string>
    <string name="users_header">Users</string>
    <string name="users_pending_header">Pending request</string>
    <string name="add_users_adapter">Add user</string>
    <string name="add_user_email_header">Email</string>
    <string name="add_user_role_header">Role</string>
    <string name="login_user_name_hint">Login/email</string>
    <string name="addsensor_sensor_name_hint">Name of new sensor</string>
    <string name="addsensor_new_location_hint">New location name</string>
    <string name="addadapter_ser_num_hint">Input of serial number</string>
    <string name="toast_changeto">\u0020changed to:\u0020</string>
    <string name="toast_new_sensor_added">New sensor was added</string>
    <string name="toast_new_sensor_not_added">Error when adding sensor</string>
    <string name="toast_need_sensor_name">Write name of sensor please</string>
    <string name="toast_need_sensor_location_name">Write name of new location please</string>
    <string name="toast_bad_password">Wrong name or password</string>
    <string name="toast_connecting_to_server">Connecting to server &#8230;</string>
    <string name="toast_welcome_text">Welcome </string>
    <string name="toast_play_missing">GooglePlay is missing or outdated</string>
    <string name="toast_internet_connection">Please turn internet connection on</string>
    <string name="toast_no_unregistered_adapter">There is no connected unregistered adapter</string>
    <string name="toast_communication_error">Sorry, some communication problem, try later</string>
    <string name="toast_tap_again_exit">Tap back again to exit</string>
    <string name="toast_google_auth">Google authentication</string>
    <string name="toast_something_wrong">Something goes wrong, try it later please</string>
    <string name="toast_check_your_connection_via_browser">Check your connection via browser</string>
    <string name="toast_not_implemented">Not implemented yet!</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="toast_adapter_activate_failed">Failed to activate adapter.</string>
    <string name="toast_adapter_activated">Adapter has been activated.</string>
    <string name="toast_adapter_removed">Adapter has been removed.</string>
    <string name="toast_no_adapter">You have no registered adapter.</string>
    <string name="toast_ignore_uninitialized_info">You can add these devices later by clicking on (+)</string>
    <string name="toast_empty_sensor_name">Fill names of all sensors !</string>
    <string name="toast_wrong_or_no_device">Wrong or no device selected</string>
    <string name="toast_no_uninitialized_devices">There are no uninitialized devices.</string>
    <string name="toast_success_save_data">Success to save data</string>
    <string name="toast_fail_save_data">Failed saving data</string>
    <string name="progress_signing">Signing to server&#8230;</string>
    <string name="progress_google">Handshaking with Google&#8230;</string>
    <string name="progress_signup">Registering new user&#8230;</string>
    <string name="progress_loading_adapters">Loading your adapters&#8230;</string>
    <string name="progress_loading_adapter">Loading adapter data&#8230;</string>
    <string name="progress_loading_demo">Loading demo data&#8230;</string>
    <string name="progress_saving_data">Saving data&#8230;</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <string name="location">Locations</string>
    <string name="custom_view">Custom views</string>
    <string name="adapter">Adapters</string>
    <string name="no_location">No locations</string>
    <string name="no_custom_view">No custom views</string>
    <string name="no_adapters">You have no adapters</string>
    <string name="addsensor_sending_request">Pair request sending </string>
    <string name="addsensor_send_request">Send pair request  </string>
    <string name="addsensor_active_pair">Active pair mode </string>
    <string name="addadapter_textview_name">Name</string>
    <string name="addadapter_view_setname">Set adapter name, e.g. Home</string>
    <string name="addadapter_textview_code">QR code </string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_refreshlist">Refresh list</string>
    <string name="action_addadapter">Add adapter</string>
    <string name="action_addsensor">Add sensor</string>
    <string name="action_logout">Logout</string>
    <string name="action_hide_sensor">Hide sensor</string>
    <string name="action_unregist_facility">Unregist facility</string>
    <string name="action_hide_facility">Hide facility</string>
    <string name="action_close">Cancel</string>
    <string name="action_intro">Intro</string>
    <string name="action_intro_dialog">Intro dialog</string>
    <string name="addadapter_qrcode_desc">Get QR code</string>
    <string name="addsensor_new_location_spinner">New location</string>
    <string name="sen_detail_graph_info">Tap to Active</string>
    <string name="loading_data">Loading data&#8230;</string>
    <string name="no_sensor_cap">NO SENSORS</string>
    <string name="no_adapter_cap">NO ADAPTER</string>
    <string-array name="registration_spinner">
        <item>Facebook</item>
        <item>Google</item>
        <item>MojeID</item>
    </string-array>
    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string-array name="title_of_main_fragments">
        <item>List</item>
        <item>Custom</item>
    </string-array>
    <string-array name="user_role">
        <item>SuperAdmin</item>
        <item>Admin</item>
        <item>User</item>
        <item>Guest</item>
    </string-array>
    <string name="log_sc_or">or</string>
    <string name="placeholder_icon">Icon</string>
    <string name="placeholder_none">Loading</string>
    <string name="placeholder_not_exists">NOT EXISTS</string>
    <string name="widget_sensor_title_small">IHA Sensor detail 1x1</string>
    <string name="widget_sensor_title_medium">IHA Sensor detail 2x1</string>
    <string name="widget_sensor_title_large">IHA Sensor detail 3x1</string>
    <string name="widget_cached">(cached)</string>
    <string name="widget_configuration_adapter">Adapter:</string>
    <string name="widget_configuration_sensor">Sensor to be shown:</string>
    <string name="widget_configuration_interval_sensor">Sensor update interval:</string>
    <string name="widget_configuration_interval_widget">Widget update interval:</string>
    <string name="widget_configuration_login_first">You must be logged in first.</string>
    <string name="widget_configuration_no_adapters">You have no adapters and thus no sensors to use in widget.</string>
    <string name="widget_configuration_select_adapter">Select adapter from list</string>
    <string name="widget_configuration_select_device">Select device from list</string>
    <string name="play_link">market://details?id=cz.vutbr.fit.iha</string>
    <string name="company_email">media@rehivetech.com</string>
    <string name="company_web">http://rehivetech.com/</string>
    <string name="copyright">\u00A9 2014 RehiveTech. All rights reserved</string>
    <string name="version">Version</string>
    <string name="logo">Logo</string>
    <string name="rate">Rate</string>
    <string name="ok">OK</string>
    <string name="website">Website</string>
    <plurals name="interval_seconds">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="interval_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="personal">Personal</string>
    <string name="user_profile">User profile</string>
    <string name="units">Units</string>
    <string name="timezone">Timezone</string>
    <string name="temperature">Temperature</string>
    <string name="smartwatches">Smartwatches</string>
    <string name="choose_default_location">Choose default location</string>
    <string name="choose_default_adapter">Choose default adapter</string>
    <string name="default_location">Default location</string>
    <string name="default_adapter">Default adapter</string>
</resources>