<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:persistent="false"
        android:title="@string/personal" >
        <Preference android:title="@string/user_profile" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.google.com/settings/personalinfo" />
        </Preference>

        <PreferenceScreen
            android:persistent="false"
            android:title="@string/units" >
            <ListPreference
                android:entries="@array/unit_temperature_name"
                android:entryValues="@array/unit_temperature_value"
                android:key="pref_temperature"
                android:title="@string/temperature" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/smartwatches" >
        <ListPreference
            android:dialogTitle="@string/choose_default_adapter"
            android:key="pref_sw2_adapter"
            android:title="@string/default_adapter" />
        <ListPreference
            android:dialogTitle="@string/choose_default_location"
            android:key="pref_sw2_location"
            android:title="@string/default_location" />
    </PreferenceCategory>

</PreferenceScreen>