<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- item
        android:id="@+id/action_refreshlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refreshlist"></item-->
    
    <item
        android:id="@+id/action_addadapter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_addadapter"/>
    
    <item
        android:id="@+id/action_intro"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_intro"
        android:icon="@drawable/add_sensor_view"/>
    <item
        android:id="@+id/action_intro_dialog"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_intro_dialog"
        android:icon="@drawable/add_sensor_view"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>