<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
        android:id="@+id/action_hide_sensor"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_hide_sensor"/>
     
     <item
        android:id="@+id/action_unregist_facility"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_unregist_facility"/>
     <item
        android:id="@+id/action_hide_facility"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/action_hide_facility"/>
     <item
        android:id="@+id/action_close"
        android:orderInCategory="250"
        android:showAsAction="always"
        android:icon="@drawable/iha_ic_action_cancel"
        android:title="@string/action_close"/>

</menu>
