<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="270dp"
    android:background="@color/light_gray"
    android:padding="10dp"
    >

	<TextView
        android:id="@+id/addadapter_add_adapter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addadapter_add_adapter"
	    android:gravity="center_horizontal"
	    android:paddingBottom="25dp"
	    android:textColor="@color/log_blue2"
	    android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<ImageButton
	    android:id="@+id/addadapter_qrcode_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="20dp"
	    android:layout_gravity="center_horizontal"
	    android:contentDescription="@string/addadapter_qrcode_desc"
	    android:src="@drawable/qrcode" />
	
	<TextView
	    android:id="@+id/addadapter_or"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="25dp"
	    android:text="@string/addsensor_or"
	    android:textColor="@color/log_blue2" 
	    android:gravity="center_horizontal"
	    android:textIsSelectable="false"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<EditText
	    android:id="@+id/addadapter_ser_num"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="70dp"
	    android:ems="10"
	    android:hint="@string/addadapter_ser_num_hint"
	    android:inputType="numberDecimal" />
	
	<Button
	    android:id="@+id/addadapter_add_button"
	    android:layout_width="90dp"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="60dp"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/notification_add" />

</LinearLayout>
