<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context=".AddSensorActivity" >

    <TextView
        android:id="@+id/addsensor_add_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/addsensor_add_sensor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addsensor_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/notification_add" />

    <EditText
        android:id="@+id/addsensor_new_location_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addsensor_add"
        android:layout_alignLeft="@+id/spinner_choose_location"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/addsensor_new_location_hint"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/addsensor_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addsensor_new_location_hint"
        android:layout_alignLeft="@+id/addsensor_new_location_hint"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="27dp"
        android:text="@string/addsensor_or"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_choose_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addsensor_or"
        android:layout_alignLeft="@+id/addsensor_sensor_name_hint"
        android:layout_marginBottom="26dp" />

    <EditText
        android:id="@+id/addsensor_sensor_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner_choose_location"
        android:layout_alignLeft="@+id/addsensor_add_sensor"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/addsensor_sensor_name_hint"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/addsensor_involved_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/addsensor_type"
        android:layout_below="@+id/addsensor_type"
        android:layout_marginTop="17dp"
        android:text="@string/addsensor_involved_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/addsensor_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addsensor_add_sensor"
        android:layout_marginTop="14dp"
        android:text="@string/addsensor_type"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>