<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="270dp"
  	android:background="@color/light_gray"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/log_blue2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/addsensor_add_sensor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:text="@string/addsensor_setup_sensor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textIsSelectable="false" />

    </LinearLayout>
    
    
    <TextView
        android:id="@+id/addsensor_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/addsensor_type"
        android:textColor="@color/log_blue2"
	    android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
    <TextView
        android:id="@+id/addsensor_involved_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
		android:layout_marginLeft="10dp"
        android:text="@string/addsensor_involved_time"
        android:textColor="@color/log_blue2"
	    android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/addsensor_sensor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/addsensor_sensor_name_hint"
        android:inputType="textNoSuggestions"
        android:textColor="@color/log_blue2" />
   
    <Spinner
        android:id="@+id/addsensor_spinner_choose_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp" 
        />
    
    <TextView
        android:id="@+id/addsensor_or"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/addsensor_or"
        android:textColor="@color/log_blue2"
	    android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout 
        android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="15dp" >
    
    	<Spinner
	        android:id="@+id/addsensor_spinner_choose_new_location_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent" />
	    
	    <EditText
	        android:id="@+id/addsensor_new_location_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/addsensor_new_location_hint"
	        android:inputType="textNoSuggestions" 
	        android:textColor="@color/log_blue2"/>
    
    </LinearLayout>

   <Button
        android:id="@+id/addsensor_add"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/notification_add" />
    
</LinearLayout>
