<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="260dp"
    android:minHeight="200dp"
    android:background="@color/beeeon_primary_cyan"
    >

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:scrollbars="vertical" 
    		android:scrollbarAlwaysDrawVerticalTrack="true"
            >   
		    <LinearLayout 
		        android:orientation="vertical"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:layout_marginBottom="5dp"
		        android:layout_gravity="center">
		        
		        <TextView
				    android:id="@+id/addadapter_textview_name"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/addadapter_textview_name"
				    android:textColor="@color/beeeon_drawer_bg"
				    android:layout_gravity="left"
				    android:textIsSelectable="false"
				    android:textAppearance="?android:attr/textAppearanceMedium" />
				
				<EditText
				    android:id="@+id/addgate_text_name"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:layout_marginLeft="5dp"
				    android:layout_marginRight="5dp"
				    android:ems="10"
				    android:hint="@string/addadapter_view_setname"
				    android:textColor="@color/beeeon_drawer_bg"
					android:textColorHint="@color/beeeon_drawer_bg"
				    android:singleLine="true"
				    android:imeOptions="actionNext" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:orientation="vertical"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:layout_marginBottom="15dp"
		        android:layout_gravity="center" 
		        >
		         <TextView
				    android:id="@+id/addadapter_textview_code"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/addadapter_textview_code"
				    android:textColor="@color/beeeon_drawer_bg"
				    android:layout_gravity="left"
				    android:textIsSelectable="false"
				    android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    
			    <LinearLayout 
			        android:orientation="horizontal"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:layout_gravity="center">
			        
			        <ImageButton
					    android:id="@+id/addgate_qrcode_button"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center_horizontal"
					    android:contentDescription="@string/addadapter_qrcode_desc"
					    android:src="@drawable/qrcode" />
					
					<TextView
					    android:id="@+id/addadapter_or"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/addsensor_or"
					    android:textColor="@color/beeeon_drawer_bg"
					    android:layout_gravity="center"
					    android:textIsSelectable="false"
					    android:textAppearance="?android:attr/textAppearanceMedium" />
					
					<EditText
					    android:id="@+id/addgate_ser_num"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center"
					    android:ems="10"
					    android:hint="@string/addadapter_ser_num_hint"
					    android:inputType="numberDecimal"
					    android:textColor="@color/beeeon_drawer_bg"
						android:textColorHint="@color/beeeon_drawer_bg"
					    android:singleLine="true"
					    android:imeOptions="actionDone" />
				
			    </LinearLayout>
			</LinearLayout>
		</LinearLayout>
    </ScrollView>
</LinearLayout>
